--- a/horta-facil-mobile/package.json
+++ b/horta-facil-mobile/package.json
@@ -10,10 +10,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^7.5.5",
+    "@react-navigation/native": "^7.1.16",
+    "@react-navigation/stack": "^7.4.4",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
