--- a/frontend_react_native/package.json
+++ b/frontend_react_native/package.json
@@ -10,15 +10,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/drawer": "^7.5.5",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/stack": "^7.4.4",
-    "expo": "~53.0.20",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
+    "axios": "^1.7.2",
+    "babel-preset-expo": "^54.0.9",
+    "expo": "~54.0.0",
+    "expo-status-bar": "~3.0.9",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
